--- a/react-client-app/src/Components/Navbar.css
+++ b/react-client-app/src/Components/Navbar.css
@@ -23,7 +23,6 @@
   justify-self: start;
   margin-left: 10px;
   cursor: pointer;
-  display: flex;
   align-items: center;
 }
 
@@ -83,9 +82,9 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 90vh;
+    height: 70vh;
     position: absolute;
-    top: 80px;
+    top: 100px;
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
@@ -114,7 +113,7 @@
 
   .navbar-logo {
     position: absolute;
-    top: 0;
+    top: -15px;
     left: 0;
     transform: translate(25%, 50%);
   }
